# Mobile-Manupulator-Simulation-Test

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-ubuntu24-ros2-mujoco.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  reproduction_task.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  RELEASE_CHECKLIST.md  REPRODUCTION_ZH.md  ROADMAP.md
mujoco/: ddmoma_7dof.xml
mujoco_models/: ddmoma_7dof.xml
nmoma_repro/: __init__.py  benchmark.py  data.py  diffusion.py  kinematics.py  losses.py  metrics.py  optimizer.py  planner.py  primitives.py  scene.py  training.py
ros2_ws/src/nmoma_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/nmoma_msgs/action/: Plan.action
ros2_ws/src/nmoma_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/nmoma_ros2/nmoma_ros2/: __init__.py  nmoma_planner_node.py
scripts/: fit_primitives.py  generate_mvp_dataset.py  run_benchmark.py  run_core_planner_demo.py  run_mujoco_demo.py
tests/: test_core_mvp.py  test_diffusion_training_postprocess.py  test_mujoco_visual_demo.py  test_repository_maintenance.py  test_scaffold_contracts.py  test_training_benchmark_scaffold.py
