<?xml version="1.0"?>
<package format="3">
  <name>nmoma_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 action server wrapper for the NMOMA reproduction planner.</description>
  <maintainer email="user@example.com">RAS Lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>nmoma_msgs</exec_depend>
</package>
